fix: changes to resolve comments
