# interfaces/http/rest/middlewares/iam/jwt.go
@@ -9,22 +9,22 @@ import (
 	"gomora/internal/errors"
 )
 
-// JWTAuthCustomMiddleware handles JWT authentication custom errors
-func JWTAuthCustomMiddleware(next http.Handler) http.Handler {
+// JWTAuthMiddleware handles JWT authentication custom errors
+func JWTAuthMiddleware(next http.Handler) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		_, claims, err := jwtauth.FromContext(r.Context())
 		if err != nil {
 			var httpCode int
 			var errorMsg string
 
-			switch {
-			case err == jwtauth.ErrExpired:
+			switch err {
+			case jwtauth.ErrExpired:
 				httpCode = http.StatusUnauthorized
 				errorMsg = "Token has expired."
-			case err == jwtauth.ErrNoTokenFound:
+			case jwtauth.ErrNoTokenFound:
 				httpCode = http.StatusUnauthorized
 				errorMsg = "No token found."
-			case err == jwtauth.ErrUnauthorized:
+			case jwtauth.ErrUnauthorized:
 				httpCode = http.StatusUnauthorized
 				errorMsg = "Invalid token."
 			default:
@@ -43,9 +43,20 @@ func JWTAuthCustomMiddleware(next http.Handler) http.Handler {
 			return
 		}
 
-		// If token is valid, proceed to the next handler
-		if claims != nil {
-			next.ServeHTTP(w, r)
+		// if token is nil, creates unauthorized response
+		if claims == nil {
+			response := viewmodels.HTTPResponseVM{
+				Status:    http.StatusUnauthorized,
+				Success:   false,
+				Message:   "Invalid token",
+				ErrorCode: errors.UnauthorizedAccess,
+			}
+
+			response.JSON(w)
+			return
 		}
+
+		// if token is valid, proceeds to the next handler
+		next.ServeHTTP(w, r)
 	})
 }
